# insurance-outreach-ai

./: .env.example  .gitignore  README.md  gradio_app.py  main.py  prospects.json  requirements.txt  research.ipynb  tests
backend/: app.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
backend/backend/api/routes/: calls.py  prospects.py
backend/backend/core/: config.py
backend/backend/models/: domain.py
backend/backend/services/: call.py  db.py  email.py  generator.py  workflow.py
backend/data/: prospects.json
backend/tests/: conftest.py  test_api_basic.py
